将popup界面简化为一张图片，点击图片→执行popup.js

--- a/popup.html
+++ b/popup.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-	* {
-		margin: 0;
-		padding: 0;
-	}
 
-	body {
-		width: 900px;
-		height: 400px;
-	}
-</style>
 </head>
 <body>
-	<img id="target" src="128.jpg"/>
+	<img id="target" src="live.png"/>
 	<script src="popup.js"></script>
 </body>
 </html>
